web-infras/parser/tests/fixtures/esprima/es2017/async/invalid-await/invalid-await-declaration1/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (1,26)
1|async function f() { let await; }
 |                        ^
